deleted:    index 	modified:   index.adoc 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -555,6 +555,18 @@ pre.pygments .tok-il { color: #666666 } /* Literal.Number.Integer.Long */
 <div class="sect1">
 <h2 id="_software_installation">1. Software installation</h2>
 <div class="sectionbody">
+<div class="admonitionblock important">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-important" title="Important"></i>
+</td>
+<td class="content">
+The Virtual Machine has already been set up with all necessary software installed for the course at CIHEAM Zaragoza in November 2023.
+</td>
+</tr>
+</table>
+</div>
 <div class="olist arabic">
 <ol class="arabic">
 <li>
@@ -1246,7 +1258,7 @@ cat kallisto.txt  <span class="tok-p">|</span> tr _- <span class="tok-s1">&#39;\
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2020-12-11 08:59:08 +0100
+Last updated 2023-11-02 09:56:27 +0100
 </div>
 </div>
 </body>
